# NeuroSonic

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  train.py
docs/: index.html
neurosonic/: __init__.py  engine.py  flow_matching.py  model.py
neurosonic/utils/: __init__.py  model_util.py
scripts/: evaluate_eav.sh  train_eav.sh
